Timestamp VSIX when signing
Fixes #1166

--- a/src/Integration.Vsix/SignVsixes.targets
+++ b/src/Integration.Vsix/SignVsixes.targets
@@ -57,7 +57,7 @@
   <Target Name="SignVsixes">
     <Error Condition=" $(pfxCertificatePath) == '' " Text="pfxCertificatePath has not been set" />
     <Error Condition=" $(pfxPassword) == '' " Text="pfxPassword has not been set" />
-    <Exec Command="$(VsixSignToolPath) sign /f $(pfxCertificatePath) /p $(pfxPassword) /sha1 $(pfxSha1) %(VSIXesToSign.Identity)" />
+    <Exec Command="$(VsixSignToolPath) sign /f $(pfxCertificatePath) /p $(pfxPassword) /sha1 $(pfxSha1) /tr http://timestamp.digicert.com /v %(VSIXesToSign.Identity)" />
   </Target>
 
 </Project>
