Added SonarQube client to the list of assembles to be signed

--- a/src/Integration.Vsix/Integration.Vsix.csproj
+++ b/src/Integration.Vsix/Integration.Vsix.csproj
@@ -303,6 +303,7 @@
   <Target Name="LocateSonarLintAssemblies">
     <ItemGroup>
       <AssembliesToSign Include="$(OutDir)SonarLint*.dll" />
+      <AssembliesToSign Include="$(OutDir)SonarQube*.dll" />
     </ItemGroup>
   </Target>
 
