--- a/src/Integration.Vsix/Integration.Vsix.csproj
+++ b/src/Integration.Vsix/Integration.Vsix.csproj
@@ -59,6 +59,7 @@
     <ProjectGuid>{FF2AD819-28F4-493A-8E9B-1D3F16BD4689}</ProjectGuid>
     <RootNamespace>SonarLint.VisualStudio.Integration.Vsix</RootNamespace>
     <AssemblyName>SonarLint.$(VersionSpecificSuffix)</AssemblyName>
+    <RequiresSigning>true</RequiresSigning>
     <TargetVsixContainerName>SonarLint.VSIX-$(VsixVersion)-$(VersionSpecificSuffix).vsix</TargetVsixContainerName>
     
     <GeneratePkgDefFile>true</GeneratePkgDefFile>
@@ -294,7 +295,6 @@
   <!-- ********************************************************** -->
   <!-- Copy and sign the VSIX -->
   <!-- ********************************************************** -->
-  <Import Project="$(MSBuildThisFileDirectory)SignVsixes.targets" />
 
   <!-- Set properties required by the signing targets -->
   <PropertyGroup>
@@ -317,7 +317,7 @@
   <!-- ********************************************************** -->
   <Target Name="GenerateProtobufClasses" BeforeTargets="PrepareForBuild" Outputs="$(ProjectDir)Protobuf\SonarlintDaemon.cs" Inputs="$(ProjectDir)Protobuf\sonarlint-daemon.proto">
     <Message Importance="high" Text="Generating protobuf classes..." />
-    <Exec WorkingDirectory="$(ProjectDir)Protobuf" Command='build.bat "$(NuGetPackageRoot)Grpc.Tools\1.4.1\tools\windows_x64"' />
+    <Exec WorkingDirectory="$(ProjectDir)Protobuf" Command="build.bat &quot;$(NuGetPackageRoot)Grpc.Tools\1.4.1\tools\windows_x64&quot;" />
 
     <!-- Make sure that any files we have just generated are included in the compilation -->
     <ItemGroup>
@@ -408,4 +408,3 @@
   </Target>
 
 </Project>
-
