Integrate System.IO.Abstractions

--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="6.0.8" />
+    <PackageReference Include="System.IO.Abstractions" Version="7.1.10" />
   </ItemGroup>
 
   <ItemGroup>
