--- a/src/Core.UnitTests/Core.UnitTests.csproj
+++ b/src/Core.UnitTests/Core.UnitTests.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
   
   <ItemGroup Label="Test framework">
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.4.0" />
     <PackageReference Include="MSTest.TestFramework" Version="1.4.0" />
 
