--- a/src/Integration.UnitTests/Integration.UnitTests.csproj
+++ b/src/Integration.UnitTests/Integration.UnitTests.csproj
@@ -55,6 +55,8 @@
 
     <PackageReference Include="Moq" Version="4.10.1" />
     <PackageReference Include="FluentAssertions" Version="5.9.0" />
+    <PackageReference Include="System.IO.Abstractions" Version="9.0.4" />
+    <PackageReference Include="System.IO.Abstractions.TestingHelpers" Version="9.0.4" />
   </ItemGroup>
 
   <ItemGroup>
